@@ -26,7 +26,7 @@
 
 #define LIBRAW_MAJOR_VERSION  0
 #define LIBRAW_MINOR_VERSION  8
-#define LIBRAW_PATCH_VERSION  3
+#define LIBRAW_PATCH_VERSION  4
 #define LIBRAW_VERSION_TAIL   Release
 
 #define _LIBRAW_VERSION_MAKE(a,b,c,d) #a"."#b"."#c"-"#d
